# workspace-cache

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/actions/build-workspace/: README.md  action.yml
.github/actions/install-workspace-cache/: README.md  action.yml
.github/workflows/: cache-test.yml  ci.yml  example.yml  release.yml
example-workspace/: Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.common  Dockerfile.utils
example-workspace/.workspace-cache/: Cargo.toml
example-workspace/crates/api/: Dockerfile
example-workspace/crates/api/src/: main.rs
example-workspace/crates/app/: Cargo.toml
example-workspace/crates/app/src/: main.rs
example-workspace/crates/common/: Cargo.toml
example-workspace/crates/worker/: Dockerfile
examples/workspace/: Cargo.toml  Dockerfile  Dockerfile.api
examples/workspace/crates/api/: Cargo.toml  Dockerfile
examples/workspace/crates/order/: Cargo.toml  Dockerfile
examples/workspace/crates/order/src/: main.rs
examples/workspace/crates/pkg-a/: Cargo.toml
examples/workspace/crates/pkg-a/src/: lib.rs
examples/workspace/crates/pkg-b/: Cargo.toml
examples/workspace/crates/user/: Cargo.toml  Dockerfile
examples/workspace/crates/user/src/: lib.rs
examples/workspace/crates/utils/src/: lib.rs
examples/workspace/crates/worker/: Cargo.toml
examples/workspace/crates/worker/src/: main.rs
src/: builder.rs  cli.rs  dockerfile.rs  generator.rs  main.rs  metadata.rs
tests/: integration.rs
