[package]
name = "workspace-cache"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "workspace-cache"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo_metadata = "0.18"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"
minijinja = "2.0"

[dev-dependencies]
tempfile = "3"
