[package]
name = "workspace-cache"
description = "A CLI to generate cached Docker builds for Rust workspace"
version = "0.1.0-alpha.2"
repository = "https://github.com/preiter93/workspace-cache"
authors = ["preiter <phil.reiter93@gmail.com>"]
keywords = ["workspace", "cache", "docker", "microservice", "chef"]
readme = "README.md"
edition = "2024"
license = "MIT"

[[bin]]
name = "workspace-cache"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo_metadata = "0.23"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.25"
minijinja = "2.18"

[dev-dependencies]
tempfile = "3"
